--- a/2017-03-18.md
+++ b/2017-03-18.md
@@ -12,7 +12,11 @@ The meeting ended at ???.
 
 The Treasurer and President reported an update for the bank account.
 
-The Treasurer will send the current T-shirt inventory report to the Board members.
+The President reports that a repeat of the current order of the type of shirts that we have with embroidery would
+cost $22 per unit. Shirts of a thicker fabric with embroidery would cost $26.50 per unit. The President moved that
+the User Group purchase the thicker-fabric shirt in a dark grey color (graphite); the motion passed unanimously.
+
+The Treasurer reported that we have 12 XL dark blue, 1 XL dark blue with white trim on the collar, and 1 XXXL blue shirt in the current inventory.
 
 ## New Business
 
@@ -22,12 +26,16 @@ former sponsors to see if they have interest.
 
 The Secretary will review the current Web site over the next week and provide a report regarding its readiness.
 
-The speaker for April will not be able to present. A replacement speaker has voluteered. The new topic is ASP.NET
+The President reported that the speaker for April can not present and that he selected a new speaker. The new topic is ASP.NET
 Core. The President confirmed that the Secretary will still talk in May on containerization; the speaker confirmed
 his availaibility.
 
 The President reported that he contacted Pluralsight regarding the availability of 30-day licenses that the User
-Group could use as prizes. Pluralsight reported that they will no longer provide them. The President made the motion
-that the User Group purchase co-branded Starbucks gift cards as prizes. The motion passed unanimously.
+Group could use as prizes. Pluralsight reported that they will no longer provide them.
 
-The Vice President reported that we had two Telerik UI for Xamarin and two Devcraft Complete licenses.
+The President made the motion that the User Group purchase co-branded Starbucks gift cards as prizes. The motion
+passed unanimously based on the co-branding success. Otherwise, the User Group will purchase unbranded Starbucks
+cards.
+
+The Vice President reported that we have two Telerik UI for Xamarin and two Teleril DevCraft Complete licenses
+available for prizes.
